<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="score1">Score: 2530</string>
    <string name="app_name">StickyHabits</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome">Welcome to Sticky Habits!</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="username">Username</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="email">Email</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_my_goals">MyGoals</string>
    <string name="title_activity_add_habit">AddHabit</string>
    <string name="title_activity_choose_habit">ChooseHabit</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_global_statistics">GraphicStatistics</string>
    <string name="title_activity_habit_statistics">HabitStatistics</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_logout">Logout</string>
    <string name="title_activity_buy_avatar">BuyAvatar</string>
    <string name="title_activity_view_habit">View Habit</string>
    <string name="sign_up">Sign Up</string>
    <string name="goal">Goal</string>
    <string name="start_date">Start Date</string>
    <string name="duration">Duration (in weeks)</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="select_questionary_frequency">Select Questionary Frequency</string>
    <string name="select_kind">Select Kind</string>
    <string name="select_contribution">Select Contribution</string>
    <string name="title_activity_questionary">Questionary</string>
    <string name="fill_question">Fill with a Question</string>
    <string name="numeric">Numeric</string>
    <string name="selection">Selection</string>
    <string name="add_question">Add Question</string>
    <string name="see_statistic">Statistic</string>
    <string name="global">Global Graphic Statistics</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="user">User</string>
    <string name="alarms">Alarms</string>
    <string name="mode">Mode Challenge</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="send">Send Feedback</string>
    <string name="terms">Terms of Service</string>
    <string name="privacy">Privacy Policy</string>
    <string name="version">Version</string>
    <string name="number_version">1.0.136</string>

    <string-array name="difficulty_array">
        <item>Select Questionary Frequency</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Weekend</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="questionary_frequency_array">
        <item>Select Difficulty</item>
        <item>Normal</item>
        <item>Challenge</item>
    </string-array>
    <string-array name="contribution_array">
        <item>Select Contribution</item>
        <item>Proportional</item>
        <item>Inversely Proportional</item>
    </string-array>

    <string name="contribution_value">Contribution Value</string>
    <string name="contribution_value_rank">Contribution Value Rank</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="new_password">New Password</string>
    <string name="change_email_or_password">Change Email or Password</string>
    <string name="save">Save</string>
    <string name="add_friend">Add friend</string>
    <string name="friends">Friends</string>
    <string name="unfriend">Unfriend</string>
    <string name="share_facebook">Share with Facebook</string>
    <string name="answer">Answer</string>
    <string name="score">Score</string>
    <string name="add_answer">Add Answer</string>
    <string name="delete_answer">Delete Answer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_help_terms_privacy">About</string>
    <string name="default_money_value">1500</string>
    <string name="title_activity_answer_questionary">AnswerQuestionary</string>
    <string name="submit">Submit</string>
    <string name="numerical_value">Insert numeric value</string>
    <string name="options">Select one of the options</string>
    <string name="old_password">Old Password</string>
    <string name="title_activity_select_avatar">SelectAvatar</string>
    <string name="title_activity_store">BuyAvatar</string>

</resources>